--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -17791,7 +17791,6 @@ Event&lt;/b&gt;</property>
 <widget class="GtkWindow" id="language_window">
   <property name="border_width">10</property>
   <property name="width_request">350</property>
-  <property name="height_request">200</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Chronojump language select</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
@@ -17799,14 +17798,14 @@ Event&lt;/b&gt;</property>
   <property name="modal">True</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
+  <property name="decorated">False</property>
+  <property name="skip_taskbar_hint">True</property>
+  <property name="skip_pager_hint">True</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
   <property name="urgency_hint">False</property>
-  <signal name="destroy" handler="on_language_destroy" last_modification_time="Sun, 18 Feb 2007 01:14:25 GMT"/>
+  <signal name="delete_event" handler="on_delete_event" last_modification_time="Mon, 19 Feb 2007 10:29:40 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox92">
@@ -17817,9 +17816,9 @@ Event&lt;/b&gt;</property>
       <child>
 	<widget class="GtkLabel" id="label321">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Please select language</property>
+	  <property name="label" translatable="yes">Please select &lt;b&gt;Chronojump&lt;/b&gt; language</property>
 	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
+	  <property name="use_markup">True</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
 	  <property name="wrap">False</property>
 	  <property name="selectable">False</property>
@@ -17904,7 +17903,6 @@ Event&lt;/b&gt;</property>
 	  <property name="padding">0</property>
 	  <property name="expand">False</property>
 	  <property name="fill">True</property>
-	  <property name="pack_type">GTK_PACK_END</property>
 	</packing>
       </child>
     </widget>
