--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12059,7 +12059,7 @@ If you need more, just repeat the operation later.</property>
 				    <widget class="GtkButton" id="button_run_1000m">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
-				      <property name="label">1000m</property>
+				      <property name="label">1Km</property>
 				      <property name="use_underline">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
@@ -12076,7 +12076,7 @@ If you need more, just repeat the operation later.</property>
 				    <widget class="GtkButton" id="button_run_2000m">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
-				      <property name="label">2000m</property>
+				      <property name="label">2Km</property>
 				      <property name="use_underline">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
