--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -8222,7 +8222,7 @@ If you need more, just repeat the operation later.</property>
   <property name="width_request">520</property>
   <property name="height_request">350</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Show all events of a person</property>
+  <property name="title" translatable="yes">Show all tests of a person</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">True</property>
@@ -9788,7 +9788,7 @@ If you need more, just repeat the operation later.</property>
 		  <child>
 		    <widget class="GtkImageMenuItem" id="show_all_person_events">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_Show all events of current person</property>
+		      <property name="label" translatable="yes">_Show all tests of current person</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_show_all_person_events_activate" last_modification_time="Mon, 29 Aug 2005 09:51:24 GMT"/>
 
@@ -10790,7 +10790,7 @@ If you need more, just repeat the operation later.</property>
 				  <child>
 				    <widget class="GtkButton" id="button_show_all_person_events">
 				      <property name="visible">True</property>
-				      <property name="tooltip" translatable="yes">show all events of this person</property>
+				      <property name="tooltip" translatable="yes">show all tests of this person</property>
 				      <property name="can_focus">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
@@ -13934,7 +13934,7 @@ If you need more, just repeat the operation later.</property>
 	  <child>
 	    <widget class="GtkButton" id="button_last_delete">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">delete last event</property>
+	      <property name="tooltip" translatable="yes">delete last test</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
@@ -15102,7 +15102,7 @@ If you need more, just repeat the operation later.</property>
 
 	  <child>
 	    <widget class="GtkButton" id="button_help">
-	      <property name="visible">True</property>
+	      <property name="sensitive">False</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-help</property>
 	      <property name="use_stock">True</property>
@@ -15122,7 +15122,7 @@ If you need more, just repeat the operation later.</property>
 	    <widget class="GtkLabel" id="label_simulated">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">&lt;b&gt;Simulated
-Event&lt;/b&gt;</property>
+Test&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_CENTER</property>
@@ -18842,7 +18842,7 @@ Event&lt;/b&gt;</property>
 		    <widget class="GtkCheckButton" id="checkbutton_show_vertical_grid">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Show grid (on multiple events)</property>
+		      <property name="label" translatable="yes">Show grid (on repetitive tests)</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
@@ -19122,7 +19122,7 @@ Event&lt;/b&gt;</property>
 <widget class="GtkWindow" id="repetitive_conditions">
   <property name="border_width">10</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Conditions in repetive event</property>
+  <property name="title" translatable="yes">Conditions in repetive test</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
